@@ -1,6 +1,8 @@
 package com.SeleniumGrid;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.openqa.selenium.WebDriver;
@@ -8,13 +10,18 @@ import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.testng.annotations.Test;
 
-public class FirstGridTest {
+
+public class FirstGridTest 
+{
+  WebDriver driver;
   @Test
-  public void testOnRemoteChrome() throws MalformedURLException, InterruptedException 
+  public void testOnRemoteChrome() throws MalformedURLException, InterruptedException, URISyntaxException 
   {  
 	 System.out.println("Remote connectivity is started!");
 	 ChromeOptions cap=new ChromeOptions();
-	 WebDriver driver=new RemoteWebDriver(new URL("http://localhost:4444"),cap);
+	 URL url=new URI("http://localhost:4444").toURL();
+	 driver=new RemoteWebDriver(url,cap);
+	 
 	 System.out.println("Remote connectivity is completed!");
 	  
 	 Thread.sleep(5000);
